@@ -2,9 +2,7 @@ Twitter-API
 ===========
 [![experimental](http://badges.github.io/stability-badges/dist/experimental.svg)](http://github.com/badges/stability-badges) [![Build Status](https://travis-ci.org/semifor/Twitter-API.svg?branch=master)](https://travis-ci.org/semifor/Twitter-API)
 
-This is a rewrite of [Net::Twitter][1] and [Net::Twitter::Lite][2]. If it works out, I'll deprecate those modules in favor of this one.
-
-The final distribution name is yet to be decided, so it may change.
+This is a rewrite of [Net::Twitter][1] and [Net::Twitter::Lite][2]. If it works out, this will become Net::Twitter 5.x, and Net::Twitter::Lite will go away.
 
 I have several goals for the rewrite:
 * leaner
@@ -21,7 +19,7 @@ To get started, clone the repository, install [Carton][3] if you don't already h
 
 See the [current examples](examples).
 
-The core of this code is currently in `Twitter::API::request`. The idea is to have a sequence of stages that have the proper granularity so they can be easily augmented with roles (traits) or overridden in derived classes to easily extend and enhance the core. The base module should be lean, and fully functional for the most common use cases.
+The core of this code is currently in `Net::Twitter::request`. The idea is to have a sequence of stages that have the proper granularity so they can be easily augmented with roles (traits) or overridden in derived classes to easily extend and enhance the core. The base module should be lean, and fully functional for the most common use cases.
 
 Feedback
 --------
