@@ -1,10 +1,9 @@
+name           = Net-Twitter
 author         = Marc Mims <marc@questright.com>
 license        = Perl_5
 copyright_year = 2015-2016
 
 ;; copied from @Milla and modified
-
-[NameFromDirectory]
 
 ; Make the git repo installable
 [Git::GatherDir]
