@@ -1,6 +1,7 @@
-Revision history for Twitter::API
+Revision history for Net::Twitter
 
 {{$NEXT}}
+  - renamed to Net::Twitter
 
 0.0103  2016-12-06 07:43:10 PST (TRIAL RELEASE)
   - fixed: RetryOnError failed to load
